argocd/habit-trove/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: habit-trove
  labels:
    app: habit-trove
spec:
  replicas: 1
  serviceName: habit-trove
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: habit-trove
  template:
    metadata:
      labels:
        app: habit-trove
    spec:
      containers:
        - name: habit-trove
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          image: harbor.yanello.net/docker-hub-cache/dohsimpson/habittrove:v0.2.29@sha256:b8af5fe4e3649058967fb42cf0522c07a61e2b9ba64d897792b08fe3e15856a9
          volumeMounts:
            - mountPath: /app/data
              name: data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
