argocd/habit-trove/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: habit-trove
  labels:
    app: habit-trove
spec:
  # type: LoadBalancer
  ports:
    - name: habit-trove
      port: 3000
      targetPort: 3000
  selector:
    app: habit-trove
