argocd/habit-trove/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: DollarDollar
  #   gethomepage.dev/icon: sh-dollardollar-bill-y-all
  #   gethomepage.dev/description: "An open-source, self-hosted expense tracking and bill-splitting application designed for privacy, flexibility, and financial transparency."
  #   gethomepage.dev/pod-selector: app=dollardollar
  labels:
    app.kubernetes.io/instance: habit-trove
  name: habit-trove
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - habits.yanello.net
  rules:
    - backendRefs:
        - name: habit-trove
          port: 3000
